mgmt/validation/helm/loki-base/kustomize/tenants/cloudguardian/collectors/aws-cg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-aws-cg
  namespace: tenant-cloudguardian
  annotations:
    tenant: cloudguardian
    collector: aws-cg
    type: aws
spec:
  selector:
    matchLabels:
      app: aws-aws-cg
  template:
    metadata:
      labels:
        app: aws-aws-cg
    spec:
      volumes:
        - name:  aws-alloy-aws-cg
          secret:
            secretName:  aws-alloy-aws-cg
        - name: aws-logstash-aws-cg
          secret:
            secretName: aws-logstash-aws-cg
      containers:
      - name: aws-alloy-aws-cg
        image: grafana/alloy:v1.12.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        args:
        - run
        - /etc/alloy/config.alloy
        - --storage.path=/var/lib/alloy/data
        - --disable-reporting
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: aws-alloy-aws-cg
            readOnly: true
            mountPath: /etc/alloy/
      - name: logstash
        image: public.ecr.aws/k9v9d5v2/admin-tools/crd-collectors/logstash:v1.0.1
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /
            port: 9091
          initialDelaySeconds: 20
          periodSeconds: 10
        ports:
        - containerPort: 9091
        - containerPort: 9090
        args:
          - "-f"
          - "/configs/pipeline.conf"
        volumeMounts:
          - name: aws-logstash-aws-cg
            readOnly: true
            mountPath: /configs/
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
