mgmt/validation/helm/loki-base/kustomize/tenants/cloudguardian/collectors/aws-cg/httproute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-aws-cg
  namespace: tenant-cloudguardian
  annotations:
    tenant: cloudguardian
    collector: aws-cg
    type: aws
    env: validation
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/rewrites: "serviceName=aws-aws-cg rewrite=/loki/api/v1/raw"
    nginx.org/auth-type: "basic"
    nginx.org/auth-secret: "htpasswd"
spec:
  rules:
    - host: siem.v2.validation.accuknox.com
      http:
        paths:
          - path: /validation/cloudguardian/b50e8207801235f5646c4acee4484bea53db66dc31ec7c51820f7fc4/aws-cg/push
            pathType: Prefix
            backend:
              service:
                name: aws-aws-cg
                port:
                  number: 9090
